# SignalCLI

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  FIX_CI.md  Makefile  README.md  SETUP.md  docker-compose.mcp.yml  docker-compose.yml  format.py  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  release.yml
config/: deployment.yml  prometheus.yml  settings.yaml
config/alerts/: signalcli.yml
data/schemas/: comparison_response.json  list_response.json  qa_response.json
docker/: Dockerfile.mcp  docker-compose.prod.yml  entrypoint.sh
docs/: architecture.md  design.md  mcp_best_practices.md  mcp_quickstart.md  mcp_server.md
examples/: mcp_advanced_examples.py  mcp_client.py
scripts/: deploy.py  start_all.sh  start_mcp.sh  stop_all.sh
src/: __init__.py
src/api/: __init__.py  client.py  dependencies.py  main.py  mcp_integration.py  models.py
src/application/jsonformer/: validator.py
src/application/rag/: pipeline.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  exceptions.py
src/core/interfaces/: __init__.py
src/core/models/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/cache/: __init__.py  base.py  memory_cache.py  redis_cache.py
src/infrastructure/embeddings/: sentence_transformer.py
src/infrastructure/indexing/: __init__.py  chunker.py  indexer.py  loaders.py  preprocessor.py
src/infrastructure/llm/: __init__.py  base.py  llamacpp_engine.py  mock_engine.py  openai_engine.py
src/infrastructure/observability/: metrics.py
src/infrastructure/vector_store/: __init__.py  base.py  memory_store.py  weaviate_store.py
src/mcp/: __init__.py  builtin_tools.py  cache.py  handlers.py  main.py  permissions.py  protocol.py  router.py  server.py  server_proper.py  tools.py
src/utils/: __init__.py  config.py  document_chunker.py  logger.py  setup.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_mcp_server.py  test_rag_pipeline.py
tests/unit/: __init__.py  test_cache.py  test_document_chunker.py  test_json_validator.py  test_llm_engine.py  test_vector_store.py
